--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "highway-delight-assignment-client",
   "version": "1.0.0",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.42",
