Prepare for Netlify deployment - remove Vercel config, fix router setup

--- a/client/.env.example
+++ b/client/.env.example
@@ -7,5 +7,5 @@ REACT_APP_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 
 # API Base URL
 # Development: http://localhost:5000/api
-# Production: https://your-backend-domain.com/api
-REACT_APP_API_URL=http://localhost:5000/api
+# Production: https://your-backend-domain.onrender.com/api
+REACT_APP_API_URL=https://your-backend-domain.onrender.com/api
