Update netlify.toml to match Netlify UI configuration

--- a/client/public/netlify.toml
+++ b/client/public/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  publish = "build"
+  publish = "client/build"
   command = "npm run build"
+  base = "client"
 
 [[redirects]]
   from = "/*"
