--- a/server/package.json
+++ b/server/package.json
@@ -20,18 +20,18 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
     "joi": "^17.11.0",
-    "express-rate-limit": "^7.1.5"
+    "express-rate-limit": "^7.1.5",
+    "typescript": "^5.3.3",
+    "@types/node": "^20.10.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.10.4",
     "@types/pg": "^8.10.9",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/nodemailer": "^6.4.14",
-    "typescript": "^5.3.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1",
     "rimraf": "^5.0.5"
