--- a/server/package.json
+++ b/server/package.json
@@ -22,16 +22,16 @@
     "joi": "^17.11.0",
     "express-rate-limit": "^7.1.5",
     "typescript": "^5.3.3",
-    "@types/node": "^20.10.4"
-  },
-  "devDependencies": {
+    "@types/node": "^20.10.4",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/morgan": "^1.9.9",
     "@types/pg": "^8.10.9",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/nodemailer": "^6.4.14",
+    "@types/nodemailer": "^6.4.14"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1",
     "rimraf": "^5.0.5"
